gui/menu.h

typedef struct ag_menu_item {
	char *_Nonnull text;		/* Label text */
	int lblMenu[2];			/* Cached surfaces (for AG_Menu) */
	int lblView[2];			/* Cached surfaces (for AG_MenuView) */
	int icon;			/* Icon surface mapping */
	AG_Surface *_Nullable iconSrc;	/* Icon surface source */
	int value;			/* Default bool value binding */

	int          state;		/* State flag */
	AG_Function *_Nullable stateFn;	/* State function (overrides flag) */

	AG_KeySym key_equiv;		/* Key shortcut */
	AG_KeyMod key_mod;
	int x, y;			/* Position in parent view */
	AG_Event *_Nullable clickFn;	/* Raised on click */
	AG_Event *_Nullable poll;	/* Raised before the item is drawn */
	Uint flags;
#define AG_MENU_ITEM_ICONS	  0x01	/* At least one subitems has an icon
					   (optimization) */
#define AG_MENU_ITEM_NOSELECT	  0x02	/* Non-selectable regardless of state */
#define AG_MENU_ITEM_SEPARATOR	  0x04	/* Item is a cosmetic separator */

	enum ag_menu_binding {		/* Boolean binding */
		AG_MENU_NO_BINDING,
		AG_MENU_INT_BOOL,
		AG_MENU_INT8_BOOL,
		AG_MENU_INT_FLAGS,
		AG_MENU_INT8_FLAGS,
		AG_MENU_INT16_FLAGS,
		AG_MENU_INT32_FLAGS
	} bind_type;
	void *_Nullable bind_p;			       /* Pointer to data */
	Uint32 bind_flags;			       /* Bitmask (for FLAGS) */
	int bind_invert;			       /* Inverted value */
	_Nullable_Mutex AG_Mutex *_Nullable bind_lock; /* Lock on data */

	struct ag_menu_view *_Nullable view;        /* Back pointer to view (subitems) */
	struct ag_menu *_Nullable      pmenu;       /* Parent menu */
	struct ag_menu_item *_Nullable sel_subitem; /* Selected subitem */
	struct ag_button *_Nullable    tbButton;    /* Associated toolbar button */
	struct ag_menu_item *_Nullable parent;      /* Parent MenuItem if any */

	AG_TAILQ_ENTRY(ag_menu_item) items;	/* In parent */
	AG_TAILQ_HEAD_(ag_menu_item) subItems;	/* Child items */
	Uint                        nSubItems;
} AG_MenuItem;
typedef struct ag_menu {
	struct ag_widget wid;		/* AG_Widget -> AG_Menu */
	Uint flags;
#define AG_MENU_HFILL	 	0x01
#define AG_MENU_VFILL	 	0x02
#define AG_MENU_EXPAND	 	(AG_MENU_HFILL|AG_MENU_VFILL)
	enum ag_menu_style style;	/* Menu style */
	AG_MenuItem *_Nullable root;	/* Root menu item */
	int selecting;			/* Selection in progress */
	AG_MenuItem *_Nullable itemSel;	/* Selected top-level item */
	int spHoriz;			/* Horiz spacing between items */
	int spVert;			/* Vertical spacing between items */
	int lPad, rPad, tPad, bPad;	/* Global padding in pixels */
	int lPadLbl, rPadLbl;		/* Item label padding in pixels */
	int tPadLbl, bPadLbl;
	int itemh;			/* Item height (optimization) */
	int curState;			/* For MenuState() */
	AG_Toolbar *_Nullable curToolbar; /* For MenuToolbar() */
	AG_Rect r;			  /* View area */
} AG_Menu;
typedef struct ag_popup_menu {
	AG_Widget   *_Nonnull  widget;	/* Parent widget */
	AG_Menu     *_Nonnull  menu;	/* Menu (allocated) */
	AG_MenuItem *_Nonnull  root;	/* Alias for menu->root */
	AG_Window   *_Nullable win;	/* Expanded window */
} AG_PopupMenu;
AG_Menu	*_Nonnull  AG_MenuNew(void *_Nullable, Uint);
AG_Menu	*_Nullable AG_MenuNewGlobal(Uint);
AG_PopupMenu *_Nonnull AG_PopupNew(void *_Nonnull);
void		       AG_PopupHide(AG_PopupMenu *_Nonnull);
void		       AG_PopupDestroy(AG_PopupMenu *_Nonnull);
void	             AG_MenuItemFree(AG_MenuItem *_Nonnull);
void   	             AG_MenuCollapse(AG_MenuItem *_Nullable);
void AG_MenuSetIcon(AG_MenuItem *_Nonnull, const AG_Surface *_Nullable);
void	AG_MenuState(AG_MenuItem *_Nonnull, int);
#define AG_MenuDisable(m) AG_MenuState((m),0)
#define AG_MenuEnable(m) AG_MenuState((m),1)
AG_MenuItem *_Nonnull AG_MenuSeparator(AG_MenuItem *_Nonnull);